@@ -56,8 +56,8 @@ Known Issues
   use a dedicated init script instead).
 
 * S3QL relies on the backends not to run out of space. This is a given
-  for big storage providers like Amazon S3, but you may stumble upon
-  this if you store buckets e.g. on smaller servers or servies.
+  for big storage providers like Amazon S3 or Google Storage, but you
+  may stumble upon this if you use your own server or smaller providers.
 
   If there is no space left in the backend, attempts to write more
   data into the S3QL file system will fail and the file system will be
